# pyfullstack

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pylintrc  Makefile  pyproject.toml  readme.md
back/: __main__.py  app.py  settings.py  worker.py
back/schemas/: base.py
back/storage/: __init__.py  abc.py  pg.py  utils.py
back/storage/dto/: ticker.py
back/tests/: conftest.py  test_states.py  test_utils.py  test_worker.py
back/ticker/: router.py  utils.py
back/ticker/v1/: __init__.py  list.py  states.py
back/utils/: json.py
db/migrations/: 20220506231215_init.sql
docker/dev/: back.dockerfile  docker-compose.yml  front.dockerfile
docker/prod/: back.dockerfile  docker-compose.yml  front.dockerfile
front/: package-lock.json  package.json
front/src/: App.vue
nginx/: dev.conf  prod.conf
