[tool.poetry]
name = "pyfullstack"
version = "0.0.1"
description = ""
authors = ["jmarkin <me@jmarkin.ru>"]
include = ["back"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
asyncpg = "^0.25.0"
uvicorn = "^0.17.6"
uvloop = { version = "^0.16.0", optional = true }
orjson = { version = "^3.6.8", optional = true }
gunicorn = { version = "^20.1.0", optional = true }
typer = "^0.4.1"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
pytest = "^7.1.1"
pylint = "^2.13.5"
bandit = "^1.7.4"
ipython = "^8.2.0"
debugpy = "^1.6.0"
mypy = "^0.950"
coloredlogs = "^15.0.1"
requests = "^2.27.1"
pytest-asyncio = "^0.18.3"
pytest-env = "^0.6.2"

[tool.poetry.extras]
production = ["uvloop", "orjson", "gunicorn"]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_classes = "*Test Test*"
python_files = "test_*.py *_test.py"
python_functions = "test_*  *_test"
norecursedirs = ".venv venv"
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["slow: Show slow tests", "new: Run only new tests"]
env = [
    "D:LOG_LEVEL=DEBUG",
]

[tool.bandit]
exclude_dirs = [
  ".svn",
  "CVS",
  ".bzr",
  ".hg",
  ".git",
  "__pycache__",
  ".tox",
  ".eggs",
  "*.egg",
  "*/tests/*.py",
  "template",
]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
